--- a/todo_list/templates/home.html
+++ b/todo_list/templates/home.html
@@ -21,7 +21,7 @@
             <table class="table table-sm table-bordered">
                 <thead>
                     <tr>
-                    <th class="text-center" scope="col">Item</th>
+                    <th class="text-center" scope="col">Item list</th>
                     <th class="text-center" scope="col">Action</th>
                     <th class="text-center" scope="col">Edit</th>
                     <th class="text-center" scope="col">Delete</th>
