--- a/todo_list/templates/base.html
+++ b/todo_list/templates/base.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'home' %}">ToDo App</a>
+        <a class="navbar-brand my-auto" href="{% url 'home' %}">ToDo </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,7 +27,7 @@
             <form class="form-inline my-2 my-lg-0" method="POST">
             {% csrf_token %}
               <input class="form-control mr-sm-2" type="search" placeholder="To-Do Item" aria-label="Search" name="item">
-              <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Add To List</button>
+              <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Add To List</button>
             </form>
         </div>
     </nav>
