--- a/todo_list/templates/about.html
+++ b/todo_list/templates/about.html
@@ -1,10 +1,49 @@
 {% extends 'base.html' %}
 
-{% block title %}
-    | About
-{% endblock title %}
-
 {% block content %}
-    <h1>About Page</h1>
-{% endblock content %}
+<!-- Intro  -->
+<h1 align="center">
+    <samp> Hi,I'm
+        <b><a target="_blank" href="https://github.com/ShubhamMca88">Shubham</a></b>
+    </samp>
+</h1>
+<p align="center">
+    <samp>Hy I'm shubham, as developer with a passion for crafting clean and efficient
+        code. Proficient in frontend and backend technologies, with a focus on creating intuitive user
+        experiences and scalable solutions. Dedicated to continuous learning and staying updated with
+        the latest industry trends. Ready to contribute to dynamic teams and drive impactful projects.
+    </samp>
+</p>
 
+<p align="center">
+    <a href="https://www.linkedin.com/in/shubham-kumar-266652237/" target="_blank">
+        <img
+            src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" />&nbsp;
+    </a>
+    <a href="https://github.com/ShubhamMca88" target="_blank">
+        <img src="https://img.shields.io/badge/Github-1DA1F2?style=for-the-badge&logo=github&logoColor=white" />&nbsp;
+    </a>
+    <a href="https://www.instagram.com/su.g.am?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+        target="_blank">
+        <img src="https://img.shields.io/badge/Instagram-fe4164?style=for-the-badge&logo=instagram&logoColor=white" />
+    </a>
+
+<h1>Connect me </h1>
+
+<p>
+
+    ✌️ &emsp; Enjoy to do programming and love to see the output <br /><br />
+    ❤️ &emsp; Love to writing code and learning new features<br /><br />
+    📧 &emsp; Reach me anytime: shubhamkumar.mca88@gmail.com<br /><br />
+</p>
+
+<h3 align="left">Support </h3>
+<p><a href="https://buymeacoffee.com/shubhammca88"> <img align="left"
+            src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" height="50" width="210"
+            alt="shubham" /></a></p><br><br>
+
+<br />
+<hr />
+<br />
+
+{% endblock content %}
